--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "firebase": "^8.2.1",
+    "i18next": "^19.8.4",
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.5",
+    "react-lottie": "^1.2.3",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
