--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
-    "default": "demoattendance-7d80c"
+    "default": "pams-e7971"
+  },
+  "targets": {
+    "pams-e7971": {
+      "hosting": {
+        "individualattendanceapp": [
+          "individualattendanceapp"
+        ]
+      }
+    }
   }
 }
