--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,17 @@
 {
-  "hosting": {
+  "hosting": [{
+    "target": "individualattendanceapp",
     "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
-  }
+  }]
 }
