--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.6.0",
     "firebase": "^8.2.1",
     "i18next": "^19.8.4",
+    "quagga": "^0.12.1",
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
