--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.5",
     "react-lottie": "^1.2.3",
+    "react-qr-barcode-scanner": "^1.0.6",
+    "react-qr-scanner": "^1.0.0-alpha.7",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
