--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-i18next": "^11.8.5",
     "react-lottie": "^1.2.3",
     "react-qr-barcode-scanner": "^1.0.6",
+    "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.7",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
