implemented qr code scanner

--- a/.firebaserc
+++ b/.firebaserc
@@ -5,8 +5,8 @@
   "targets": {
     "pams-e7971": {
       "hosting": {
-        "individualattendanceapp": [
-          "individualattendanceapp"
+        "test-individualattendance": [
+          "test-individualattendance"
         ]
       }
     }
