--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-lottie": "^1.2.3",
     "react-qr-barcode-scanner": "^1.0.6",
     "react-scripts": "4.0.1",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.2.1",
     "use-sound": "^4.0.0",
     "web-vitals": "^0.2.4"
